<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/tv_product_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view5" />

    <View
        android:id="@+id/view5"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="#18A661"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_insert_product_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/hint_product_name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_product_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_product_name" />

    <TextView
        android:id="@+id/tv_product_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tv_product_price"
        app:layout_constraintStart_toStartOf="@+id/et_insert_product_name"
        app:layout_constraintTop_toBottomOf="@+id/et_insert_product_name" />

    <EditText
        android:id="@+id/et_insert_product_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/hint_product_price"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/et_insert_product_amount"
        app:layout_constraintStart_toStartOf="@+id/tv_product_price"
        app:layout_constraintTop_toBottomOf="@+id/tv_product_price" />

    <TextView
        android:id="@+id/tv_product_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_product_amount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toEndOf="@+id/tv_product_price"
        app:layout_constraintTop_toTopOf="@+id/tv_product_price" />

    <EditText
        android:id="@+id/et_insert_product_amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/hint_product_amount"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_product_amount"
        app:layout_constraintTop_toBottomOf="@+id/tv_product_amount" />

    <TextView
        android:id="@+id/tv_product_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tv_product_description"
        app:layout_constraintStart_toStartOf="@+id/et_insert_product_price"
        app:layout_constraintTop_toBottomOf="@+id/et_insert_product_price" />

    <EditText
        android:id="@+id/et_insert_product_description"
        android:layout_width="387dp"
        android:layout_height="110dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/hint_product_description"
        android:inputType="textMultiLine"
        android:maxHeight="110dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_product_description"
        app:layout_constraintTop_toBottomOf="@+id/tv_product_description" />

    <Button
        android:id="@+id/btn_insert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:backgroundTint="#18A661"
        android:text="@string/btn_insert_product"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_select_image" />

    <ImageView
        android:id="@+id/iv_select_image"
        android:layout_width="128dp"
        android:layout_height="123dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/border_imageview"
        android:rotation="0"
        android:rotationX="0"
        android:rotationY="0"
        app:layout_constraintStart_toStartOf="@+id/et_insert_product_description"
        app:layout_constraintTop_toBottomOf="@+id/et_insert_product_description" />

    <Button
        android:id="@+id/btn_select_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="60dp"
        android:backgroundTint="#18A661"
        android:text="@string/btn_select_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_insert_product_description" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/title_insert_product"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view5" />
</androidx.constraintlayout.widget.ConstraintLayout>