<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".product_information">

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="#18A661"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/product_inform"
        android:layout_width="363dp"
        android:layout_height="326dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <Button
        android:id="@+id/btn_add_cart"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="#18A661"
        android:text="@string/btn_add_cart"
        app:layout_constraintEnd_toEndOf="@+id/product_inform"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/product_inform"
        app:layout_constraintTop_toBottomOf="@+id/btn_check_more" />

    <Button
        android:id="@+id/btn_check_more"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="#18A661"
        android:text="@string/btn_check_more"
        app:layout_constraintEnd_toEndOf="@+id/product_inform"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/product_inform"
        app:layout_constraintTop_toBottomOf="@+id/tv_product_information_name" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_inform">

        <Button
            android:id="@+id/btn_all_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#18A661"
            android:maxWidth="120dp"
            android:text="@string/btn_all_command"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_write_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#18A661"
            android:maxWidth="120dp"
            android:text="@string/btn_write_command"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/iv_product_information_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/product_inform"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/product_inform"
        app:layout_constraintTop_toTopOf="@+id/product_inform"
        app:srcCompat="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/tv_product_information_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="商品名稱"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/product_inform"
        app:layout_constraintHorizontal_bias="0.088"
        app:layout_constraintStart_toStartOf="@+id/product_inform"
        app:layout_constraintTop_toBottomOf="@+id/iv_product_information_image" />

    <TextView
        android:id="@+id/tv_product_information_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/product_information"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2" />

</androidx.constraintlayout.widget.ConstraintLayout>