<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00FFFFFF"
    android:backgroundTint="#00FFFFFF"
    tools:context=".ui.personInfo.PersonInfoFragment">

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="#18A661"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.example.mystore.CircularImageView
        android:id="@+id/profile_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="16dp"
        android:background="@drawable/round_btn"
        android:src="@drawable/human"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
        android:id="@+id/tv_account_person_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="帳號名稱"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="@+id/profile_image"
        app:layout_constraintStart_toEndOf="@+id/profile_image"
        app:layout_constraintTop_toTopOf="@+id/profile_image" />

    <Button
        android:id="@+id/btn_top_up"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_person_info"
        android:backgroundTint="#00FFFFFF"
        android:drawablePadding="8dp"
        android:gravity="start|center_vertical"
        android:padding="16dp"
        android:text="@string/btn_top_up"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/black"
        android:textColorHighlight="#00FFFFFF"
        android:textColorLink="#00000000"
        app:icon="@drawable/ic_top_up"
        app:iconGravity="textStart"
        app:iconSize="48dp"
        app:iconTint="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view" />

    <Button
        android:id="@+id/btn_trade_history"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_person_info"
        android:backgroundTint="#00FFFFFF"
        android:drawablePadding="8dp"
        android:gravity="start|center_vertical"
        android:padding="16dp"
        android:text="@string/btn_trade_history"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/black"
        android:textColorHighlight="#00FFFFFF"
        android:textColorLink="#00FFFFFF"
        app:icon="@drawable/ic_transaction_history"
        app:iconGravity="textStart"
        app:iconSize="48dp"
        app:iconTint="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_top_up" />

    <Button
        android:id="@+id/btn_language"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_person_info"
        android:backgroundTint="#00FFFFFF"
        android:drawablePadding="8dp"
        android:gravity="start|center_vertical"
        android:padding="16dp"
        android:text="@string/btn_language"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/black"
        android:textColorHighlight="#00FFFFFF"
        android:textColorLink="#00FFFFFF"
        app:icon="@drawable/ic_language"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:iconSize="48dp"
        app:iconTint="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_trade_history" />

    <Button
        android:id="@+id/btn_launched_product"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_person_info"
        android:backgroundTint="#00FFFFFF"
        android:drawablePadding="8dp"
        android:gravity="start|center_vertical"
        android:padding="16dp"
        android:text="@string/btn_launched_product"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/black"
        android:textColorHighlight="#00FFFFFF"
        android:textColorLink="#00FFFFFF"
        app:icon="@drawable/ic_launched_product"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:iconSize="48dp"
        app:iconTint="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_language" />

    <Button
        android:id="@+id/btn_sign_out"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_person_info"
        android:backgroundTint="#00FFFFFF"
        android:drawablePadding="8dp"
        android:gravity="start|center_vertical"
        android:padding="16dp"
        android:text="@string/btn_sign_out"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#FF0000"
        android:textColorHighlight="#00FFFFFF"
        android:textColorLink="#00FFFFFF"
        app:icon="@drawable/ic_sign_out"
        app:iconGravity="textStart"
        app:iconSize="48dp"
        app:iconTint="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_launched_product" />
</androidx.constraintlayout.widget.ConstraintLayout>
